# GoB

./: .gitignore  README.md  pyproject.toml  train.sh
GoB/: artifact.py  config.py  logger.py  loss.py  plot_history.py  run.py  run_.py  run_alpa_test.py  test.py  updater.py  utils.py
GoB/dataset/: dataset.py  flavor_data.py  image_aug.py  jet_data.py  jet_dataset.py  jet_label.py  jet_preprocess.py  make_flavor_data.py  make_jet_data.py  utils.py
GoB/model/: film_model.py  go_beyond.py  head.py  layers.py  lorentz_net.py  make_model.py  metaformer.py  metaformer_.py  metric_layer.py  moe_layer.py  particle_embedding.py  particle_net.py  particle_transformer.py  ret_net.py  ret_net_jamie.py  ret_net_syncdoth.py  ret_net_torchscale.py  token_mixing.py  utils.py  weight_init.py
config/: config-dataset.yaml  config-largeR.yaml  config-long.yaml  config-model.yaml  config.yaml  dataset.yaml  test.yaml
plotting/: color.py  plot.py  plot_grad_weight.py  plot_image.py  plot_jet.py  plot_loss.py  plot_loss_landscape.py  plot_results.py  plot_test.py  plot_weight.py  pytorch_tsne.py  utils.py
tmp/: train_step.hlo  train_step_resharding_tasks.txt  train_step_stage_0.hlo  train_step_stage_1.hlo  train_step_stage_2.hlo  train_step_stage_3.hlo
