[tool.poetry]
name = "GoB"
version = "0.1.0"
description = ""
authors = ["Masahiro Morinaga <Masahiro.Morinaga@cern.ch>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
einops = "^0.4.1"
attrdict = "^2.0.1"
tqdm = "^4.64.0"
PyYAML = "^6.0"
yapf = "^0.32.0"
matplotlib = "^3.5.2"
GPUtil = "^1.4.0"
cupy-cuda114 = "^10.6.0"
numpy = "1.20"


jaxlib = {path = "/data/morinaga/wheel/jaxlib-0.3.5-py3-none-any.whl"}
jax = "0.3.5"
dm-haiku = "^0.0.7"
optax = "^0.1.2"
tensorflow = "^2.9.1"
scikit-learn = "^1.1.1"
mlflow = "^1.27.0"

alpa = {path = "/data/morinaga/wheel/alpa-0.0.0-cp38-cp38-linux_x86_64.whl"}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
